--- a/public/css/toolkit.css
+++ b/public/css/toolkit.css
@@ -3733,8 +3733,8 @@ fieldset[disabled] .pa .fu:focus {
   color: #cccccc;
 }
 .pc {
-  background-color: #67B572;
-  border-color: #4a9955;
+  background-color: #583F7E;
+  border-color: #382457;
 }
 .pc .e {
   color: rgba(255, 255, 255, 0.8);
