--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,9 +28,21 @@
 .star-box.last{
 	padding-left: 10px;
 }
-
-
 .mainpicture-list-project{
 	width: 100%;
 	max-height: 100px;
 }
+
+
+
+/* ------ BLOG ----------- */
+
+.title-post{
+	font-size: 18px;
+	font-weight: bold;
+}
+.title-post a{
+	color: #000;
+}
+
+/* ------ FIM BLOG ----------- */
